src/app/dashboard/dashboard.component.css
:host {
  height: 100%;
  display: block;
}

.rooms {
  width: 100%;
  height: 100%;
  overflow-y: auto;
}

.room {
  position: relative;
  font-size: 20px;
  padding: 1em 2em;
  margin: 1em 0;
}

.room img {
  transition: .3s filter linear;
  max-width: 100%;
}

.room img.light {
  filter: drop-shadow(0px 0px 7px #fff200);
}

.room .label {
  margin-bottom: 1em;
  font-size: 1.17em;
}

.room .main .temperature {
  margin-top: -.9em;
  margin-right: -.7em;
  width: 100%;
}

.room .temperature i {
  color: #3ab4d7;
  margin-right: 3px;
  font-size: 1.5em;
}

.main {
  position: relative;
}

.lite-mode {
  margin-top: .8em;
  width: 100%;
}

